--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ footer {
 body.subpage {
   position: relative;
   min-height: 100vh;
-  background-color: #fdfcfb;
+  background-color: #ffe8d1;
   overflow-x: hidden;
 }
 
