--- a/style.css
+++ b/style.css
@@ -355,8 +355,8 @@ footer {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 90%;
   display: none;
   justify-content: center;
   align-items: center;
@@ -368,10 +368,10 @@ footer {
 /* Modal content box */
 .modal-content {
   display: flex;
-  max-width: 95%;
-  max-height: 95%;
-  background: #ffe8d1; /* muted work page background */
-  border: 1px solid #ccc;
+  max-width: 90%;
+  max-height: 90%;
+  background: #effa91; /* work page background */
+  border: 1px solid #f2acf2;
   box-shadow: 0 8px 20px rgba(0,0,0,0.15);
   overflow-y: auto;
   padding: 1rem;
