--- a/style.css
+++ b/style.css
@@ -353,8 +353,9 @@ footer {
 /* Modal container */
 .modal {
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); /* centers it */
   width: 90%;
   height: 90%;
   display: none;
